--- a/app/src/main/res/layout/activity_detalle_contactos.xml
+++ b/app/src/main/res/layout/activity_detalle_contactos.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".DetalleContactosActivity">
     <TextView
+        android:id="@+id/tvNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -14,6 +15,7 @@
         android:layout_marginTop="20dp"
         android:text="Nicolas" />
     <TextView
+        android:id="@+id/tvApellido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -21,11 +23,13 @@
         android:layout_marginTop="20dp"
         android:text="Lupa" />
     <RelativeLayout
+        android:id="@+id/rlCall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
         <TextView
+            android:id="@+id/tvTelefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -34,6 +38,7 @@
             android:text="76283583" />
 
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="54dp"
             android:layout_height="53dp"
             android:layout_alignParentRight="true"
@@ -45,6 +50,7 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/tvCorreo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -52,7 +58,7 @@
         android:layout_marginTop="20dp"
         android:text="donnico@gmail.com" />
     <Button
-        android:id="@+id/call"
+        android:id="@+id/btnCall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
