--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#030000</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#1717FF</color>
     <color name="colorButtons">#6AD81B</color>
+    <color name="colorExtraButtons">#FFFFFF</color>
 </resources>
