--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -11,13 +11,37 @@
         android:layout_height="wrap_content"
         android:background="@color/colorExtraButtons"
         android:text="Ver mapa"
-        android:onClick="goToMap"/>
+        android:onClick="goToMap"
+        android:layout_margin="10dp"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorExtraButtons"
         android:text="Disponibilidad de asientos y reservas"
-        android:onClick="goToDisponibilidadAsientos"/>
+        android:onClick="goToDisponibilidadAsientos"
+        android:layout_margin="10dp"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorExtraButtons"
+        android:text="Contactos"
+        android:onClick="goToContacts"
+        android:layout_margin="10dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorExtraButtons"
+        android:text="rutas y horarios"
+        android:onClick="goToRutasHorarios"
+        android:layout_margin="10dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorExtraButtons"
+        android:text="Información"
+        android:onClick="goToInformation"
+        android:layout_margin="10dp"/>
 
 </LinearLayout>
