--- a/app/src/main/res/layout/activity_detalle_contactos.xml
+++ b/app/src/main/res/layout/activity_detalle_contactos.xml
@@ -49,14 +49,32 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tvCorreo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:text="donnico@gmail.com" />
+    <RelativeLayout
+        android:id="@+id/rlGmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvCorreo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:text="donnico@gmail.com"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="56dp"
+            android:layout_height="51dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="1dp"
+            android:src="@drawable/gmailoficial" />
+
+
+    </RelativeLayout>
+
+
     <Button
         android:id="@+id/btnCall"
         android:layout_width="wrap_content"
