--- a/app/src/main/res/layout/horario.xml
+++ b/app/src/main/res/layout/horario.xml
@@ -20,7 +20,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:backgroud="#14D11B"
+        android:background="#14D11B"
         android:paddingLeft="30px"
         android:text="Bus Cota Cota "
         android:textSize="22sp"
@@ -31,7 +31,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="                                                     A          B          C          D            E"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -40,7 +40,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Calle 35 de Cota Cota             7:00    9:05  11:10   13:10    15:15"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -49,7 +49,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Calle 25 de Cota Cota             7:05    9:10  11:15   13:15    15:20"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -58,7 +58,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Surtidor Los Pinos                   7:10    9:13  11:17   13:18    15:23"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -67,7 +67,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Calle 18 y Av.Montenegro      7:13    9:15  11:20   13:20    15:27"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -76,7 +76,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Club Petrolero                           7:15    9:18  11:25   13:23    15:29"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -85,7 +85,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Plaza Humbolt                           7:20    9:20  11:30   13:28    15:31"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -94,7 +94,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Puente Amor de Dios               7:22    9:22  11:30   13:30    15:33"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -103,7 +103,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Campus                                       7:40    9:50  11:55   13:50    16:00"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -112,7 +112,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:backgroud="#9C27B0"
+        android:background="#B731CE"
         android:paddingLeft="30px"
         android:text="Bus Achumani"
         android:textSize="22sp"
@@ -122,7 +122,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="                                                     A          B          C          D            E"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="-30dp"
@@ -131,7 +131,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Calle 41 de Achumani            6:55    8:55   11:05   13:05    15:10"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -140,7 +140,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Complejo de Achumani         7:00    9:00   11:10   13:10    15:15"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -149,7 +149,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Calle 22 de Achumani            7:05    9:05   11:15   13:14    15:19"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -158,7 +158,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="16 Mercado de Achumani     7:08    9:08   11:17   13:17    15:15"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -167,7 +167,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="22 Calacoto-Entrada Achumani  7:11  9:13  11:20 13:22  15:20"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -176,7 +176,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Calle 13 Ballivian                     7:14     9:18   11:25   13:25   15:22"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -185,7 +185,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Plaza Humboldt                       7:17     9:23   11:30   13:30   15:30"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -194,7 +194,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Puente Amor de Dios              7:20    9:30   11:30   13:40   15:35"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -203,7 +203,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Campus                                      7:40    9:50  11:55   13:50    16:00"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
