--- a/app/src/main/res/layout/rutas.xml
+++ b/app/src/main/res/layout/rutas.xml
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:backgroud="#D5A20A"
+        android:background="#D5A20A"
         android:paddingLeft="30px"
         android:text="Bus Miraflores "
         android:textSize="22sp"
@@ -33,7 +33,7 @@
         android:id="@+id/textView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="                                                     A           B          C             D              E"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
@@ -42,7 +42,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Plaza Villaroel                         6:55      8:50    11:00     13:00      15:00"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -52,7 +52,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Av.Bush-Calle Diaz Romero  7:00      9:00    11:10     13:10      15:10"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -62,7 +62,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Plaza Triangular                      7:00          -            -              -               -"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -72,7 +72,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Ex-Surtidor(Cancha Zapata)     -         9:03    11:13     13:13      15:13"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -82,7 +82,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Estado Mayor                           7:05          -            -              -               -"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -92,7 +92,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Belisario Salinas esq.20 de Octubre   9:03    11:13     13:13    15:13"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -102,7 +102,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="144dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Av. Los Leones                         7:08          -            -              -               -"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -112,7 +112,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="168dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Plaza Avaroa-Sanchez Lima     -         9:10    11:22     13:20      15:20"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -122,7 +122,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="192dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="c/0 de Obrajes                          7:10          -            -              -               -"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -132,7 +132,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="216dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Sanchez Lima-Kantutani           -         9:15    11:27     13:22      15:22"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -142,7 +142,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Av.Hector Ormachea(Plaza de La Loba)    7:15      9:20    11:32     13:30      15:30"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -152,7 +152,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="276dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Puente Amor de Dios              7:20     9:25    11:37     13:35      15:35"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -162,7 +162,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="300dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Campus                                      7:40     9:50    11:55     14:00      16:00"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -171,7 +171,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:backgroud="#03A9F4"
+        android:background="#03A9F4"
         android:paddingLeft="30px"
         android:text="Bus para clases de ingles "
         android:textSize="22sp"
@@ -183,7 +183,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="372dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Plaza Humboldt                            11:20"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
@@ -193,7 +193,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="400dp"
-        android:TextSize="15sp"
+        android:textSize="15sp"
         android:text="Campus                                          12:00"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
