--- a/app/src/main/res/layout/rutas_horarios.xml
+++ b/app/src/main/res/layout/rutas_horarios.xml
@@ -20,7 +20,7 @@
        android:text="Bus Avaroa"
        android:paddingLeft="30px"
        android:textSize="22sp"
-       android:backgroud="#CE205B"
+       android:background="#CE205B"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="49dp"
        tools:ignore="MissingConstraints"/>
@@ -28,7 +28,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text=" A: Prado(Monje Campero)                  7:00"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -37,7 +37,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="      Plaza Avaroa - Sanchez Lima        7:06"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -46,7 +46,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="      Pedro Salazar - Sanchez Lima       7:08"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -55,7 +55,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="      Sanchez Lima - Kantutani               7:09"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -64,7 +64,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="      Obrajes - Av. Ormachea                   7:14"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -73,7 +73,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="      Av. Hector Ormachea (Plaza de La Loba)             7:15"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -82,7 +82,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="      Colegio San Ignacio                          7:18"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -91,7 +91,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="      Puente Amor de Dios                        7:22"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -100,7 +100,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="      Campus                                                7:40"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -109,7 +109,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:backgroud="#CE205B"
+       android:background="#CE205B"
        android:paddingLeft="30px"
        android:text="Bus Alto Obrajes"
        android:textSize="22sp"
@@ -120,7 +120,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text=" A:   Av. Del Maestro - Entrada Trillizos           7:05"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-37dp"
@@ -129,7 +129,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="        Av. Del Maestro - Normal                           7:08"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -138,7 +138,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="        Parque Quezada                                           7:10"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -147,7 +147,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="        Raul Gamarra                                               7:12"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -156,7 +156,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="        Alfredo Arias                                                7:13"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -165,7 +165,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="        Calle 10 de Obrajes                                    7:15"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -174,7 +174,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="        Av. Hector Ormachea                                7:17"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -183,7 +183,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:backgroud="#CE2034"
+       android:background="#CE2034"
        android:paddingLeft="30px"
        android:text="Bus Irpavi"
        android:textSize="22sp"
@@ -194,7 +194,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="                                            A       B        C          D"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -203,7 +203,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="Catedral Castrense      7:00  9:05  11:10  13:10"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -212,7 +212,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="Calle 15 de Irpavi          7:05  9:08  11:15  13:15"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -221,7 +221,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="Calle 18 de Irpavi          7:08  9:11  11:18  13:18"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -230,7 +230,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="Pablo Sanchez              7:15  9:18  11:25  13:25"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -239,7 +239,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="Catedral Castrense      7:17  9:20  11:30  13:30"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -248,7 +248,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="Plaza Humboldt            7:22  9:22  11:35  13:35"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
@@ -257,7 +257,7 @@
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
-       android:TextSize="15sp"
+       android:textSize="15sp"
        android:text="Campus                          7:40  9:50  11:55  13:55"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
