--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -85,6 +85,14 @@
             android:onClick="doLogin"
      />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="Registrarse"
+            android:onClick="registro"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
