Cambio en backgrounds y logos

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@color/colorPrimary" />
+                    android:src="@drawable/backkkkk" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -40,13 +40,13 @@
                     <ImageView
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        android:src="@drawable/logo"
+                        android:src="@drawable/image"
                         android:gravity="center"
                         android:layout_gravity="center"
                         android:layout_margin="90dp"/>
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:background="@color/colorExtraButtons"
