--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -12,7 +12,7 @@
         android:layout_width="131dp"
         android:layout_height="224dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/logo" />
+        android:src="@drawable/image" />
 
     <LinearLayout
         android:layout_width="match_parent"
