nueva pantalla de edicion de cuenta, scroll view a pestana deslizable, correcciond del main activity, correccion metodos db

--- a/app/src/main/res/layout/activity_opciones_cuenta.xml
+++ b/app/src/main/res/layout/activity_opciones_cuenta.xml
@@ -45,7 +45,7 @@
                 android:imeOptions="actionNext"
                 android:inputType="number"
                 android:maxLines="1"
-                android:id="@+id/editTextCodigo"
+                android:id="@+id/editTextCod"
                 android:textSize="18sp"
                 android:textColor="@color/colorExtraButtons"
                 />
@@ -76,7 +76,7 @@
                 android:imeOptions="actionGo"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:id="@+id/editTextContraseña"
+                android:id="@+id/editTextContrasena"
                 android:textSize="18sp"
                 android:textColor="@color/colorExtraButtons"
                 />
